<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.gita.spk_saw.AlternativeTwoActivity">

    <LinearLayout
        android:background="#abababab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:text="score the candidate (2/3)" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="2. Nugi" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:text="@string/bravery_label" />

                <EditText
                    android:id="@+id/score_bravery_2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:background="#fff"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:text="@string/performance_label" />

                <EditText
                    android:id="@+id/score_performance_2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:background="#fff"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:text="@string/temperament_label" />

                <RadioGroup
                    android:id="@+id/score_temperament_2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0">

                    <RadioButton
                        android:id="@+id/temperament_angry_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperament_1_label" />

                    <RadioButton
                        android:id="@+id/temperament_normal_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperament_2_label"/>

                    <RadioButton
                        android:id="@+id/temperament_calm_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temperament_3_label"/>

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/next_to_2"
                android:textColor="#fff"
                android:background="#5C6BC0"
                android:text="Next candidate >"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
